# SYSTEM

./: AST_RESTRUCTURE_STATUS.md  COMPREHENSIVE_FIXES.md  FINAL_STATUS.md  FIXES_APPLIED.md  REBUILD_INSTRUCTIONS.txt  RMD.docx  clean_cpp.py  fix.py  fix_opt.py  fix_opt_v2.py  fix_three.py  projectprompt.docx  spreport4.docx  temp.txt  temp_mainwindow.txt  test_cpp_input.txt  test_opt.txt  test_user.txt
SwitchCaseCompiler/: BUILD_SUMMARY.md  CFG_Redesign.html  CMakeLists.txt  COMMON_ERRORS.md  COMPLETE_UPGRADE_SUMMARY.md  DEMO_GUIDE.md  DERIVATION_FIX_PLAN.md  IMPROVEMENTS_SUMMARY.md  NEW_FEATURES.md  PARSE_TREE_COMPARISON.txt  PARSE_TREE_IMPROVEMENTS.md  PARSE_TREE_QUICKSTART.txt  PARSE_TREE_SUMMARY.md  QUICK_START.md  README.md  REDESIGN_GUIDE.md  SYNTAX_QUICK_REFERENCE.txt  SwitchCaseCompiler.sln  SwitchCaseCompiler.vcxproj  TESTING.md  USAGE_GUIDE.md  build.bat  fix_parse_tree.py  presentation.html  temp_input.cpp  temp_missing_rbrace.cpp  temp_output.txt  temp_user_sample.cpp  test_ast_structure.cpp  test_code.cpp  test_derivation.cpp  test_derivation_output.cpp  test_input.txt
SwitchCaseCompiler/examples/: correct_syntax.txt  day_of_week.cpp  test1_simple.txt  test2_constant_folding.txt  test3_multiple_statements.txt  test4_nested_expressions.txt  test5_error.txt
SwitchCaseCompiler/src/: main.cpp
SwitchCaseCompiler/src/cli/: CompilerCli.cpp
SwitchCaseCompiler/src/core/: AST.cpp  AST.h  CodeGenerator.cpp  CodeGenerator.h  Lexer.cpp  Lexer.h  Optimizer.cpp  Optimizer.h  Parser.cpp  Parser.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  TACGenerator.cpp  TACGenerator.h
SwitchCaseCompiler/src/gui/: ASTView.cpp  ASTView.h  CFGVisualizer.cpp  CFGVisualizer.h  CodeEditor.cpp  CodeEditor.h  CompileReport.cpp  CompileReport.h  DebuggerPanel.cpp  DebuggerPanel.h  DerivationViewer.cpp  DerivationViewer.h  GrammarCoverage.cpp  GrammarCoverage.h  IRFlowDiagram.cpp  IRFlowDiagram.h  LifetimeDiagram.cpp  LifetimeDiagram.h  MainWindow.cpp  MainWindow.h  OptimizationDiff.cpp  OptimizationDiff.h  OptimizationPanel.cpp  OptimizationPanel.h  ParseTreeView.cpp  ParseTreeView.h  PerformanceMetrics.cpp  PerformanceMetrics.h  PipelineDiagram.cpp  PipelineDiagram.h  ShortcutOverlay.cpp  ShortcutOverlay.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  TACSimulator.cpp  TACSimulator.h  ThreeColumnView.cpp  ThreeColumnView.h  TokenChart.cpp  TokenChart.h  (+1 more)
SwitchCaseCompiler/tests/: comprehensive_test_suite.cpp  error_test_suite.cpp  run_cfg_consistency_test.ps1  run_full_validation.ps1  run_regression_tests.ps1
SwitchCaseCompiler/tests/cases/: cpp_main_not_supported.txt  lexical_illegal_char.txt  repro_user_input.txt  semantic_duplicate_case.txt  semantic_duplicate_declaration.txt  semantic_string_operator_not_supported.txt  semantic_undeclared_assignment.txt  semantic_undeclared_switch_condition.txt  semantic_uninitialized_use.txt  syntax_loop_not_supported.txt  syntax_missing_semicolon.txt  valid_basic_switch.txt  valid_declarations_and_math.txt  valid_string_switch_with_std_preamble.txt  (+1 more)
(+5 files in other folders)
